# C-projects

Chess/Cases/: Case1.txt  Case2.txt  Case3.txt  Case4.txt  Case5.txt  QueenCase2.txt
Chess/ChessFinalProject/FileInput/: QueenCase1.txt  RookCase1.txt  RookCase2.txt  result.txt
Chess/ChessFinalProject/Headers/: Bishop_h.h  GameLogic_h.h  Knight_h.h  Pawn_h.h  PrintBoardAndCreateBoard_h.h  Queen_h.h  Queue_h.h  Rook_h.h  readInput_h.h
Chess/ChessFinalProject/src/: Bishop.c  GamesLogic.c  Knight.c  Makefile  Pawn.c  PrintBoardAndCreateBoard.c  Queen.c  Queue_f.c  Rook.c  main.c  readInput.c
Starcraft/: CMakeLists.txt
Starcraft/include/: BattleField.h  Defines.h  ProtossShips.h  TerranShips.h  battleCruser.h  carrier.h  input.h  phoenix.h  viking.h
Starcraft/src/: BattleField.c  ProtossShips.c  TerranShips.c  Vector.c  battleCruser.c  carrier.c  input.c  main.c  phoenix.c  viking.c
cs/: CMakeLists.txt
cs/include/: Defines.h  Pistol.h  Player.h
cs/src/: GameFunctions.c  Pistol.c  Player.c
